Added /event/teams endpoints, updated documentation to move unimplemented stuff to a separate category.

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -16,12 +16,6 @@ servers:
   - url: /api
 
 tags:
-  - name: v1/eventGroup
-    description: Manage event groups
-
-  - name: v1/eventGroup/events
-    description: Add/remove events to event groups
-
   - name: v1/event
     description: Manage Event
 
@@ -31,9 +25,6 @@ tags:
   - name: v1/team
     description: Manage Teams (create/edit/delete)
 
-  - name: v1/team/players
-    description: Add/remove players from teams
-
   - name: v1/player
     description: Player basic operations
 
@@ -42,6 +33,9 @@ tags:
 
   - name: v1/account
     description: Create and inspect Riot accounts
+    
+  - name: Not Implemented
+    description: These endpoints are planned or WIP, but do not currently have functionality.
 
 paths:
   /v1/eventGroup:
@@ -49,7 +43,7 @@ paths:
       summary: Get all event groups
       operationId: getEventGroups
       tags:
-        - v1/eventGroup
+        - Not Implemented
       responses:
         '200':
           description: Successful operation
@@ -69,7 +63,7 @@ paths:
       summary: Create a new event group
       operationId: createEventGroup
       tags:
-        - v1/eventGroup
+        - Not Implemented
       requestBody:
         description: Event group specification
         content:
@@ -108,7 +102,7 @@ paths:
       summary: Get an event group by ID
       operationId: getEventGroupById
       tags:
-        - v1/eventGroup
+        - Not Implemented
       parameters:
         - name: eventGroupId
           in: path
@@ -139,7 +133,7 @@ paths:
       summary: Patch an event group's data
       operationId: patchEventGroup
       tags:
-        - v1/eventGroup
+        - Not Implemented
       parameters:
         - name: eventGroupId
           in: path
@@ -185,7 +179,7 @@ paths:
       summary: Get an event group with all events included
       operationId: getEventsInEventGroup
       tags:
-        - v1/eventGroup/events
+        - Not Implemented
       parameters:
         - name: eventGroupId
           in: path
@@ -214,7 +208,7 @@ paths:
       summary: Assign an event to an event group
       operationId: addEventToEventGroup
       tags:
-        - v1/eventGroup/events
+        - Not Implemented
       parameters:
         - name: eventGroupId
           in: path
@@ -252,7 +246,7 @@ paths:
       summary: Remove an event from an event group
       operationId: removeEventFromEventGroup
       tags:
-        - v1/eventGroup/events
+        - Not Implemented
       parameters:
         - name: eventGroupId
           in: path
@@ -458,6 +452,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
     post:
       summary: Link a team to an event
       operationId: addTeamToEvent
@@ -474,7 +469,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/EventAddTeamDto'
+              $ref: '#/components/schemas/EventTeamLinkDto'
       responses:
         '200':
           description: Team added to event
@@ -499,8 +494,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
-
-  /v1/event/{eventId}/teams/{teamId}:
     delete:
       summary: Remove a team from an event
       operationId: removeTeamFromEvent
@@ -512,11 +505,12 @@ paths:
           required: true
           schema:
             type: integer
-        - name: teamId
-          in: path
-          required: true
-          schema:
-            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/EventTeamLinkDto'
       responses:
         '200':
           description: Team removed from event
@@ -617,7 +611,7 @@ paths:
       summary: Patch a team's data.
       operationId: patchTeam
       tags:
-        - v1/team
+        - Not Implemented
       parameters:
         - name: teamId
           in: path
@@ -659,7 +653,7 @@ paths:
       summary: Get a team with all the players included
       operationId: getPlayersOnTeam
       tags:
-        - v1/team/players
+        - Not Implemented
       parameters:
         - name: teamId
           in: path
@@ -688,7 +682,7 @@ paths:
       summary: Add a player to a team
       operationId: addPlayerToTeam
       tags:
-        - v1/team/players
+        - Not Implemented
       parameters:
         - name: teamId
           in: path
@@ -728,7 +722,7 @@ paths:
       summary: Remove a player from a team
       operationId: removePlayerFromTeam
       tags:
-        - v1/team/players
+        - Not Implemented
       parameters:
         - name: teamId
           in: path
@@ -1223,15 +1217,14 @@ components:
             - description: The new event status.
             - example: CANCELED
             - $ref: '#/components/schemas/EventStatus'
-    EventAddTeamDto:
+    EventTeamLinkDto:
       type: object
       required:
         - teamId
       properties:
         teamId:
           type: integer
-          example: 3
-
+          description: The team to operate on
 
     NewPlayerDto:
       type: object
