--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ database.url=JDBC_PLACEHOLDER
 database.password=PASSWORD_PLACEHOLDER
 riot.key=RIOT_API_TOKEN_PLACEHOLDER
 riot.useStubs=BOOLEAN_PLACEHOLDER
+ROOT_LOG_LEVEL=TRACE
+NETTY_LOG_LEVEL=INFO
+KTOR_LOG_LEVEL=TRACE
+JOOQ_LOG_LEVEL=INFO
+HIKARI_LOG_LEVEL=INFO
