Resolving references and symbols, I should have done this with a language server from the beginning ;~;

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -16,6 +16,12 @@ servers:
   - url: /api
 
 tags:
+  - name: v1/eventGroup
+    description: Manage event groups
+
+  - name: v1/eventGroup/events
+    description: Add/remove events to event groups
+
   - name: v1/event
     description: Manage Event
 
@@ -28,6 +34,9 @@ tags:
   - name: v1/team
     description: Manage Teams (create/edit/delete)
 
+  - name: v1/team/players
+    description: Add/remove players from teams
+
   - name: v1/player
     description: Player basic operations
 
@@ -37,16 +46,13 @@ tags:
   - name: v1/account
     description: Create and inspect Riot accounts
 
-  - name: Not Implemented
-    description: These endpoints are planned or WIP, but do not currently have functionality.
-
 paths:
   /v1/eventGroup:
     get:
       summary: Get all event groups
       operationId: getEventGroups
       tags:
-        - Not Implemented
+        - v1/eventGroup
       responses:
         "200":
           description: Successful operation
@@ -66,7 +72,7 @@ paths:
       summary: Create a new event group
       operationId: createEventGroup
       tags:
-        - Not Implemented
+        - v1/eventGroup
       requestBody:
         description: Event group specification
         content:
@@ -105,7 +111,7 @@ paths:
       summary: Get an event group by ID
       operationId: getEventGroupById
       tags:
-        - Not Implemented
+        - v1/eventGroup
       parameters:
         - name: eventGroupId
           in: path
@@ -136,7 +142,7 @@ paths:
       summary: Patch an event group's data
       operationId: patchEventGroup
       tags:
-        - Not Implemented
+        - v1/eventGroup
       parameters:
         - name: eventGroupId
           in: path
@@ -182,7 +188,7 @@ paths:
       summary: Get an event group with all events included
       operationId: getEventsInEventGroup
       tags:
-        - Not Implemented
+        - v1/eventGroup/events
       parameters:
         - name: eventGroupId
           in: path
@@ -211,7 +217,7 @@ paths:
       summary: Assign an event to an event group
       operationId: addEventToEventGroup
       tags:
-        - Not Implemented
+        - v1/eventGroup/events
       parameters:
         - name: eventGroupId
           in: path
@@ -249,7 +255,7 @@ paths:
       summary: Remove an event from an event group
       operationId: removeEventFromEventGroup
       tags:
-        - Not Implemented
+        - v1/eventGroup/events
       parameters:
         - name: eventGroupId
           in: path
@@ -509,12 +515,11 @@ paths:
           required: true
           schema:
             type: integer
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/EventTeamLinkDto"
+        - name: teamId
+          in: path
+          required: true
+          schema:
+            type: integer
       responses:
         "200":
           description: Team removed from event
@@ -726,7 +731,7 @@ paths:
       summary: Patch a team's data.
       operationId: patchTeam
       tags:
-        - Not Implemented
+        - v1/team
       parameters:
         - name: teamId
           in: path
@@ -768,7 +773,7 @@ paths:
       summary: Get a team with all the players included
       operationId: getPlayersOnTeam
       tags:
-        - Not Implemented
+        - v1/team/players
       parameters:
         - name: teamId
           in: path
@@ -797,7 +802,7 @@ paths:
       summary: Add a player to a team
       operationId: addPlayerToTeam
       tags:
-        - Not Implemented
+        - v1/team/players
       parameters:
         - name: teamId
           in: path
@@ -836,7 +841,7 @@ paths:
       summary: Remove a player from a team
       operationId: removePlayerFromTeam
       tags:
-        - Not Implemented
+        - v1/team/players
       parameters:
         - name: teamId
           in: path
@@ -1383,13 +1388,13 @@ components:
         teamId:
           type: integer
           example: 3
-          description: The team to operate on
 
     EventCreateSeriesDto:
       type: object
       required:
         - team1Id
         - team2Id
+        - gamesToWin
       properties:
         team1Id:
           type: integer
@@ -1397,6 +1402,9 @@ components:
         team2Id:
           type: integer
           example: 456
+        gamesToWin:
+          type: integer
+          example: 3
 
     NewPlayerDto:
       type: object
