All tests pass, all seeding scripts succeeded. Had to make some last second API changes- series only contain teamIds for now. Coulnd't figure out a fast and clean way to include the team objects.

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -1524,10 +1524,10 @@ components:
           type: integer
         eventId:
           type: integer
-        teams:
+        teamIds:
           type: array
           items:
-            $ref: "#/components/schemas/TeamDto"
+            type: int
 
     TeamWithPlayersDto:
       type: object
