--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM gradle:8.9-jdk21 AS builder
 WORKDIR /builder
 COPY build.gradle.kts settings.gradle.kts gradle.properties .
-COPY gradle ./gradle
-RUN gradle build --no-daemon || return 0
+//COPY gradle ./gradle
+//RUN gradle build --no-daemon || return 0
 COPY . .
 RUN gradle --no-daemon installDist
 
