--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -31,6 +31,7 @@ ktor-server-resources = { group = "io.ktor", name = "ktor-server-resources", ver
 # ktor-client
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
+ktor-client-logging = { group = "io.ktor", name = "ktor-client-logging", version.ref = "ktor" }
 # ktor-client plugins
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-mock = { group = "io.ktor", name = "ktor-client-mock", version.ref = "ktor" }
@@ -61,7 +62,7 @@ mockk-core = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 ktor-server = ["ktor-server-core", "ktor-server-netty", "ktor-server-config-yaml", ]
 ktor-server-plugins = ["ktor-serialization-json", "ktor-server-swagger", "ktor-server-content-serialization", "ktor-server-cors", "ktor-server-request-validation", "ktor-server-status-pages", "ktor-server-resources"]
 ktor-client = ["ktor-client-core", "ktor-client-cio"]
-ktor-client-plugins = ["ktor-client-content-negotiation"]
+ktor-client-plugins = ["ktor-client-content-negotiation", "ktor-client-logging"]
 jooq-codegen = ["jooq-meta", "jooq-codegen"]
 database = ["jooq-core", "postgresql-core"]
 kotest-unit = ["junit-core", "kotest-runner", "kotest-assertions", "mockk-core"]
