Removed dependency caching step from CI. Local builds unchanged.

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -39,6 +39,7 @@ jobs:
           file: docker/Dockerfile
           push: true
           tags: lblcs/dennys:latest
+          target: ciapp
 
   deploy:
     needs: build
