--- a/.github/workflows/deploy-release-to-staging.yml
+++ b/.github/workflows/deploy-release-to-staging.yml
@@ -71,6 +71,7 @@ jobs:
           file: docker/Dockerfile
           push: true
           tags: lblcs/dennys:${{ env.VERSION }}
+          target: ciapp
             
   deploy-release:
     needs: build
