--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -18,38 +18,29 @@ servers:
 tags:
   - name: v1/eventGroup
     description: Manage event groups
-
   - name: v1/eventGroup/events
     description: Add/remove events to event groups
-
   - name: v1/event
     description: Manage Event
-
   - name: v1/event/teams
     description: Assign/remove teams from events
-
   - name: v1/event/series
     description: Create and get series from an event
-    
   - name: v1/series/games
     description: Create games inside of a series
-
   - name: v1/team
     description: Manage Teams (create/edit/delete)
-
   - name: v1/team/players
     description: Add/remove players from teams
-
   - name: v1/player
     description: Player basic operations
-
   - name: v1/player/accounts
     description: Riot account linking/removal
-
   - name: v1/account
     description: Create and inspect Riot accounts
 
 paths:
+  # Event Group Endpoints
   /v1/eventGroup:
     get:
       summary: Get all event groups
@@ -96,6 +87,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        "409":
+          description: |
+            Invalid resource state
+
+            Possible reasons:
+            - One of the events in eventIds is already in another event group.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "422":
           description: Validation exception
           content:
@@ -108,7 +109,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/eventGroup/{eventGroupId}:
     get:
       summary: Get an event group by ID
@@ -185,7 +185,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/eventGroup/{eventGroupId}/events:
     get:
       summary: Get an event group with all events included
@@ -217,7 +216,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
     post:
-      summary: Assign an event to an event group
+      summary: Add an event to an event group
       operationId: addEventToEventGroup
       tags:
         - v1/eventGroup/events
@@ -240,19 +239,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/EventGroupWithEventsDto"
-        "404":
-          description: Event group or event not found
-        "409":
-          description: |
-            Invalid resource state
-
-            Possible reasons:
-            - Event is already assigned to another event group
+        "400":
+          description: Invalid input
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
+        "404":
+          description: Event group or event not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /v1/eventGroup/{eventGroupId}/events/{eventId}:
     delete:
       summary: Remove an event from an event group
@@ -272,14 +270,19 @@ paths:
             type: integer
       responses:
         "200":
-          description: Event removed from event groups
+          description: Event removed from event group
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/EventGroupWithEventsDto"
         "404":
           description: Event or team not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
 
+  # Event Endpoints
   /v1/event:
     get:
       tags:
@@ -302,7 +305,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
     post:
       tags:
         - v1/event
@@ -342,7 +344,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/event/{eventId}:
     get:
       tags:
@@ -383,7 +384,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
     patch:
       tags:
         - v1/event
@@ -429,7 +429,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/event/{eventId}/teams:
     get:
       summary: Get an event with all teams included
@@ -505,7 +504,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/event/{eventId}/teams/{teamId}:
     delete:
       summary: Remove a team from an event
@@ -617,7 +615,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/event/{eventId}/series/{seriesId}:
     delete:
       summary: Remove a series from an event
@@ -648,7 +645,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-# Series Endpoints
+
+  # Series Endpoints
   /v1/series/game:
     post:
       summary: Create a game in a series
@@ -680,6 +678,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+  
+  # Team Endpoints
   /v1/team:
     get:
       summary: Get all teams
@@ -732,7 +732,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/team/{teamId}:
     get:
       summary: Get a team by ID
@@ -761,7 +760,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
     patch:
       summary: Patch a team's data.
       operationId: patchTeam
@@ -802,7 +800,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/team/{teamId}/players:
     get:
       summary: Get a team with all the players included
@@ -870,7 +867,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/team/{teamId}/players/{playerId}:
     delete:
       summary: Remove a player from a team
@@ -898,6 +894,7 @@ paths:
         "404":
           description: Team or player not found
 
+  # Player Endpoints
   /v1/player:
     get:
       summary: Get all players
@@ -949,7 +946,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/player/{playerId}:
     get:
       summary: Get player by ID
@@ -1019,7 +1015,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-
   /v1/player/{playerId}/accounts:
     post:
       summary: Link a Riot account to a player
@@ -1054,7 +1049,6 @@ paths:
           description: Riot account already assigned to another player
         default:
           description: Unexpected error
-
   /v1/player/{playerId}/accounts/{accountId}:
     delete:
       summary: Remove a Riot account from a player
@@ -1090,6 +1084,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  # Account Endpoints
   /v1/account:
     get:
       summary: Get all Riot accounts
@@ -1134,7 +1129,6 @@ paths:
           description: Riot account already exists
         default:
           description: Unexpected error
-
   /v1/account/{accountId}:
     get:
       summary: Get Riot account by ID
@@ -1162,6 +1156,16 @@ paths:
 
 components:
   schemas:
+    # Enums
+    EventStatus:
+      type: string
+      enum:
+        - NOT_STARTED
+        - ACTIVE
+        - CANCELED
+        - PAUSED
+        - COMPLETED
+
     # Game Schemas
     GameDto:
       type: object
@@ -1190,6 +1194,7 @@ components:
         number:
           type: integer
           example: 1
+          
     CreateGameDto:
       type: object
       required:
@@ -1200,15 +1205,6 @@ components:
           type: integer
         redTeamId:
           type: integer
-          
-    EventStatus:
-      type: string
-      enum:
-        - NOT_STARTED
-        - ACTIVE
-        - CANCELED
-        - PAUSED
-        - COMPLETED
 
     # Event Group Schemas
     CreateEventGroupDto:
@@ -1219,6 +1215,13 @@ components:
         name:
           type: string
           example: Season 14
+        eventIds:
+          type: array
+          items:
+            type: integer
+            example: 123
+          nullable: true
+            
     EventGroupDto:
       type: object
       required:
@@ -1230,7 +1233,8 @@ components:
           example: 0
         name:
           type: string
-          example: Season 14
+          example: Season 14 Regular Season
+          
     EventGroupWithEventsDto:
       type: object
       required:
@@ -1242,11 +1246,12 @@ components:
           example: 1
         name:
           type: string
-          example: Season 14
+          example: Season 14 Regular Season
         events:
           type: array
           items:
             $ref: "#/components/schemas/EventDto"
+            
     PatchEventGroupDto:
       type: object
       description: Fields to update on an event group
@@ -1254,6 +1259,7 @@ components:
         name:
           type: string
           example: Season 14 But New
+          
     EventGroupAddEventDto:
       type: object
       required:
@@ -1261,8 +1267,7 @@ components:
       properties:
         eventId:
           type: integer
-          format: int64
-          example: 1
+          example: 123
 
     # Event Schemas
     CreateEventDto:
@@ -1272,6 +1277,7 @@ components:
         - startDate
         - endDate
         - status
+        - eventGroupId
       properties:
         name:
           type: string
@@ -1293,6 +1299,11 @@ components:
             - description: The intended starting status of the event.
             - example: NOT_STARTED
             - $ref: "#/components/schemas/EventStatus"
+        eventGroupId:
+          type: integer
+          example: 1
+          nullable: true
+            
     EventDto:
       type: object
       required:
@@ -1303,7 +1314,7 @@ components:
         - startDate
         - endDate
         - status
-
+        - eventGroupId
       properties:
         id:
           type: integer
@@ -1333,6 +1344,11 @@ components:
             - $ref: "#/components/schemas/EventStatus"
             - description: The current event status.
             - example: NOT_STARTED
+        eventGroupId:
+          type: integer
+          example: 1
+          nullable: true
+          
     EventWithTeamsDto:
       type: object
       required:
@@ -1343,6 +1359,7 @@ components:
         - startDate
         - endDate
         - status
+        - eventGroupId
         - teams
       properties:
         id:
@@ -1371,10 +1388,15 @@ components:
             - $ref: "#/components/schemas/EventStatus"
             - description: The current event status.
             - example: NOT_STARTED
+        eventGroupId:
+          type: integer
+          example: 1
+          nullable: true
         teams:
           type: array
           items:
             $ref: "#/components/schemas/TeamDto"
+            
     EventWithSeriesDto:
       type: object
       required:
@@ -1385,6 +1407,7 @@ components:
         - startDate
         - endDate
         - status
+        - eventGroupId
         - series
       properties:
         id:
@@ -1413,10 +1436,15 @@ components:
             - $ref: "#/components/schemas/EventStatus"
             - description: The current event status.
             - example: NOT_STARTED
+        eventGroupId:
+          type: integer
+          example: 1
+          nullable: true
         series:
           type: array
           items:
             $ref: "#/components/schemas/SeriesDto"
+            
     PatchEventDto:
       type: object
       properties:
@@ -1440,6 +1468,7 @@ components:
             - description: The new event status.
             - example: CANCELED
             - $ref: "#/components/schemas/EventStatus"
+            
     EventAddTeamDto:
       type: object
       required:
@@ -1466,6 +1495,7 @@ components:
           type: integer
           example: 3
 
+    # Player Schemas
     NewPlayerDto:
       type: object
       required:
@@ -1474,30 +1504,6 @@ components:
         name:
           type: string
           example: ruuffian#FUNZ
-
-    NewRiotAccountDto:
-      type: object
-      required:
-        - riotPuuid
-      properties:
-        riotPuuid:
-          type: string
-          description: Riot's permanent unique user ID (78 chars)
-
-    RiotAccountDto:
-      type: object
-      required:
-        - id
-        - riotPuuid
-      properties:
-        id:
-          type: integer
-        riotPuuid:
-          type: string
-          description: Riot's permanent unique user ID (78 chars)
-        playerId:
-          type: integer
-          nullable: true
 
     PlayerDto:
       type: object
@@ -1529,7 +1535,33 @@ components:
           type: string
           description: New player name (not necessarily a Riot ID)
           example: newname
+    
+    # Riot Account Schemas
+    NewRiotAccountDto:
+      type: object
+      required:
+        - riotPuuid
+      properties:
+        riotPuuid:
+          type: string
+          description: Riot's permanent unique user ID (78 chars)
 
+    RiotAccountDto:
+      type: object
+      required:
+        - id
+        - riotPuuid
+      properties:
+        id:
+          type: integer
+        riotPuuid:
+          type: string
+          description: Riot's permanent unique user ID (78 chars)
+        playerId:
+          type: integer
+          nullable: true
+
+    # Team Schemas
     NewTeamDto:
       type: object
       required:
@@ -1572,23 +1604,7 @@ components:
         eventId:
           type: integer
           nullable: true
-
-    SeriesDto:
-      type: object
-      required:
-        - id
-        - eventId
-        - teams
-      properties:
-        id:
-          type: integer
-        eventId:
-          type: integer
-        teams:
-          type: array
-          items:
-            $ref: "#/components/schemas/TeamDto"
-
+    
     TeamWithPlayersDto:
       type: object
       required:
@@ -1618,6 +1634,23 @@ components:
       properties:
         playerId:
           type: integer
+
+    # Series Schema
+    SeriesDto:
+      type: object
+      required:
+        - id
+        - eventId
+        - teams
+      properties:
+        id:
+          type: integer
+        eventId:
+          type: integer
+        teams:
+          type: array
+          items:
+            $ref: "#/components/schemas/TeamDto"
 
     Error:
       type: object
