Implemented user creation. When a username/password/key combo is sent and validated, the UserService does the folllowing: 1) Salts + Hashes the incoming password, 2) Insert the user in the database. I think it may make sense to separate this out a bit, but for now I'm happy here. Next up is api key creation, which is MUCH worse :>

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ database.url=JDBC_PLACEHOLDER
 database.password=PASSWORD_PLACEHOLDER
 riot.key=RIOT_API_TOKEN_PLACEHOLDER
 riot.useStubs=BOOLEAN_PLACEHOLDER
+security.createUserSecret=CREATE_USER_SECRET_PLACEHOLDER
+security.jwtSecret=JWT_SECRET_PLACEHOLDER
 ROOT_LOG_LEVEL=TRACE
 NETTY_LOG_LEVEL=INFO
 KTOR_LOG_LEVEL=TRACE
