--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -1,3 +1,5 @@
 database.url=jdbc:postgresql://db:5432/postgres?user=postgres&prepareThreshold=0
 database.password=admin
 riot.useStubs=true
+security.createUserSecret=secretkey#1
+security.jwtSecret=jwtsecret#2
